Implement get settings
