# backend/src/docs/swagger.json
@@ -191,6 +191,76 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
+                "description": "Create a provider",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Settings"
+                ],
+                "summary": "Create a provider",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utility.ErrorResponseSchema"
+                        }
+                    }
+                }
+            }
+        },
+        "/providers/{provider_id}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
+                "description": "Update a provider",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Settings"
+                ],
+                "summary": "Update a provider",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Provider ID",
+                        "name": "provider_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utility.ErrorResponseSchema"
+                        }
+                    }
+                }
             }
         },
         "/providers/{provider_id}/settings": {
@@ -233,6 +303,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utility.SettingsGetResponseSchema"
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -253,13 +329,13 @@
                     }
                 }
             },
-            "patch": {
+            "put": {
                 "security": [
                     {
                         "ApiToken": []
                     }
                 ],
-                "description": "Create or Update the list of Settings for a given Provider",
+                "description": "Create or Update the Settings for a given Provider",
                 "consumes": [
                     "application/json"
                 ],
@@ -269,7 +345,7 @@
                 "tags": [
                     "Settings"
                 ],
-                "summary": "Create or Update the list of Settings for a given Provider",
+                "summary": "Create or Update the Settings for a given Provider",
                 "parameters": [
                     {
                         "enum": [
@@ -292,17 +368,8 @@
                     }
                 ],
                 "responses": {
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorResponseSchema"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorResponseSchema"
-                        }
+                    "204": {
+                        "description": "No Content"
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -431,9 +498,9 @@
                     "201": {
                         "description": "Created",
                         "headers": {
-                            "location": {
+                            "Location": {
                                 "type": "string",
-                                "description": "GET URL of the Created User"
+                                "description": "GET URL of the created User"
                             }
                         }
                     },
@@ -472,8 +539,8 @@
                 ],
                 "summary": "Login as a user",
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "403": {
                         "description": "Forbidden",
@@ -532,9 +599,6 @@
                 "id": {
                     "type": "string"
                 },
-                "imageUrl": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 }
@@ -547,6 +611,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/utility.ProviderGetResponseSchema"
+                    }
+                }
+            }
+        },
+        "utility.SettingsGetResponseSchema": {
+            "type": "object",
+            "properties": {
+                "provider": {
+                    "type": "string"
+                },
+                "settings": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/utility.KeyValueSchema"
                     }
                 }
             }
